--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../EXPORTED/Permitted Memories01010.exe"
+export_path="../EXPORTED/Permitted Memories v0.1.022.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -33,8 +33,8 @@ codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/modify_resources=true
 application/icon="res://icon.ico"
-application/file_version="1.0.1.0"
-application/product_version="1.0.1.0"
+application/file_version="1.0.2.2"
+application/product_version="1.0.2.2"
 application/company_name="Rafa SCN"
 application/product_name="Permitted Memories"
 application/file_description="Permitted Memories Game"
