--- a/dialogic/themes/default-theme.cfg
+++ b/dialogic/themes/default-theme.cfg
@@ -15,16 +15,17 @@ text_margin_right=-20.0
 
 [buttons]
 
-normal=[ false, Color( 1, 1, 1, 1 ), false, Color( 0, 0, 0, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
-hover=[ true, Color( 1, 0.917647, 0.0588235, 1 ), false, Color( 0, 0, 0, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
+normal=[ true, Color( 1, 0.796078, 0.105882, 1 ), false, Color( 0.603922, 0.603922, 0.603922, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
+hover=[ true, Color( 1, 0.137255, 0.137255, 1 ), false, Color( 0, 0, 0, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
 focus=[ false, Color( 0.698039, 0.698039, 0.698039, 1 ), false, Color( 0, 0, 0, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
 pressed=[ false, Color( 1, 1, 1, 1 ), false, Color( 0, 0, 0, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
 disabled=[ false, Color( 1, 1, 1, 1 ), false, Color( 0, 0, 0, 1 ), false, "res://addons/dialogic/Example Assets/backgrounds/background-2.png", false, Color( 1, 1, 1, 1 ) ]
-anchor=8
-offset=Vector2( 80, -80 )
-gap=5.0
+anchor=9
+offset=Vector2( 0, -65 )
+gap=4.0
 fixed=false
 fixed_size=Vector2( 360, 40 )
+padding=Vector2( 5, 5 )
 
 [background]
 
